test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/namespaceselector(deprecated)/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-org
  namespace: org-label-inheritance-existing-standard-ns
