test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/namespaceselector(deprecated)/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-org
  namespace: org-label-inheritance-existing-standard-ns
spec:
  containers:
  - image: nginx:latest
    name: test-org
