test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/namespaceselector(deprecated)/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespaceselector
spec:
  steps:
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: org-label-inheritance-existing-standard
  - name: step-02
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod.yaml
  - name: step-03
    try:
    - apply:
        file: configmap.yaml
    - assert:
        file: configmap.yaml
  - name: step-04
    try:
    - assert:
        file: chainsaw-step-04-assert-1-1.yaml
